--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/jsoup-1.11.3.jar')
-    implementation files('libs/glide-3.6.0.jar')
+    implementation files('libs/glide-full-4.7.0.jar')
 }
